# swp-intelligence-app

./: .env  dockerfile.dockerfile  final.py  pyproject.toml  requirements.txt
.streamlit/: secret.toml
modules/: action_planning.py  auth.py  business_correlation.py  driver_definition.py  elasticity_modeling.py  external_critical_role.py  gap_analysis.py  gap_management.py  gap_strategy_analysis.py  headcount_forecast.py  landing_page.py  logger.py  pdf_parser.py  scenario_planning.py  snowflake_connector.py  ui.py  workforce_model.py
modules/Grow_Skills/: skills.py
